# Kirigami64

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  compile  compile_cmake  deps-compile  deps-runtime  install_compile_dependencies  install_sm64_dependencies  meson.build  meson.options  messages.sh  run  run_cmake
.gitea/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: feature_pr.md  fix_pr.md  pull_request_template.md
.github/workflows/: compile-release-ubuntu_lts.yml  compile-ubuntu_lts.yml
src/: CMakeLists.txt  about.cpp  about.h  about.hpp  backend.cpp  backend.h  backend.hpp  base_build_config.conf  base_sources.conf  config.h.in  config.hpp.in  config.in.hpp  main.cpp  resources.qrc
src/contents/resources/: base_build_config.conf  base_sources.conf
src/contents/ui/: AboutSheet.qml  CloneSheet.qml  ConfigSheet.qml  ConfigureBuildSheet.qml  DisplaySheet.qml  main.qml
src/contents/ui/qml/: AboutSheet.qml  CloneSheet.qml  Config.qml  ConfigSheet.qml  ConfigureBuildSheet.qml  DisplaySheet.qml  main.qml
src/contents/ui/qml/app/: About.qml  BuildOptions.qml  General.qml  LaunchOptions.qml
src/contents/ui/qml/config/: BuildOptions.qml  General.qml  LaunchOptions.qml
